# BigFile

./: .dockerignore  .env.example  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: actions.py  config.py  main.py  models.py
app/db/: __init__.py  base.py  session.py
migrations/: env.py
tests/: test_actions.py  test_api.py
