[tool.poetry]
name = "BigFile"
version = "0.1.0"
description = ""
authors = ["speccy-rom <speccy.rom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
